--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.1.1",
+    "react-native-toast-message": "^2.0.2",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.6",
