--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/material-top-tabs": "^6.0.6",
@@ -16,6 +17,7 @@
     "axios": "^0.24.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "jwt-decode": "^3.1.2",
     "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
