--- a/package.json
+++ b/package.json
@@ -18,29 +18,34 @@
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "jwt-decode": "^3.1.2",
-    "native-base": "^2.15.2",
+    "native-base": "~2.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.0",
+    "react-native-link": "^4.1.0",
     "react-native-pager-view": "5.0.12",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-paper": "^4.10.1",
+    "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "^3.9.0",
     "react-native-svg": "12.1.1",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-toast-message": "^2.0.2",
     "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "~0.11",
+    "react-navigation-material-bottom-tabs": "^2.3.4",
     "react-redux": "^7.2.6",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.0",
     "styled-components": "^5.3.3",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
