--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~42.0.1",
+    "expo-image-picker": "^11.0.3",
     "expo-status-bar": "~1.0.4",
     "jwt-decode": "^3.1.2",
+    "mime": "^3.0.0",
     "native-base": "~2.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
